--- a/HTML+CSS/task_005_PersonalPortfolio/index.html
+++ b/HTML+CSS/task_005_PersonalPortfolio/index.html
@@ -8,57 +8,59 @@
     <title>Personal Portfolio</title>
 </head>
 <body>
-    <nav id="navbar">
-        <ul>
-            <li><a href="">About</a></li>
-            <li><a href="">Work</a></li>
-            <li><a href="">Contact</a></li>
-        </ul>
-    </nav>
-    <div class="body-container">
-        <section id="welcome-section">
-            <div class="welcome-content">
-                <h1>Hey I am Mimic</h1>
-                <p>a web developer</p>
-            </div>
-        </section>
-        <section class="project-tile">
-            <h2>These are some of my projects</h2>
-            <div class="grid-1x3">
-                <div class="project-con">
-                    <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute.jpg" alt="" class="project-img">
-                    <div class="project-title">Tribute Page</div>
-                </div>
-                <div class="project-con">
-                    <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/random-quote-machine.png" alt="" class="project-img">
-                    <div class="project-title">Random Quote Machine</div>
-                </div>
-                <div class="project-con">
-                    <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/calc.png" alt="" class="project-img">
-                    <div class="project-title">JavaScript Calculator</div>
-                </div>
-            </div>
-            <button class="btn">Show all ></button>
-        </section>
-
-        <section class="contact-section">
-            <div class="contact-header">
-                <h2>Let's work together...</h2>
-                <p>How do you take your coffee?</p>
-            </div>
-            <div class="contact-list">
+    <div class="container">
+        <nav id="navbar">
+            <div class="nav-list">
                 <ul>
-                    <li><a href="https://codepen.io/freeCodeCamp/full/zNBOYG" id="profile-link">Facebook</a></li>
-                    <li><a href="https://codepen.io/freeCodeCamp/full/zNBOYG" id="profile-link">GitHub</a></li>
-                    <li><a href="https://codepen.io/freeCodeCamp/full/zNBOYG" id="profile-link">Twitter</a></li>
-                    <li><a href="https://codepen.io/freeCodeCamp/full/zNBOYG" id="profile-link">Send a mail</a></li>
-                    <li><a href="https://codepen.io/freeCodeCamp/full/zNBOYG" id="profile-link">Call me</a></li>
+                    <li><a href="">About</a></li>
+                    <li><a href="">Work</a></li>
+                    <li><a href="">Contact</a></li>
                 </ul>
             </div>
-        </section>
-        <footer>
-
-        </footer>
+        </nav>
+        <div class="body-container">
+            <section id="welcome-section">
+                <div class="welcome-content">
+                    <h1>Hey I am Mimic</h1>
+                    <p>a web developer</p>
+                </div>
+            </section>
+            <section class="project-tile">
+                <h2 class="underline">These are some of my projects</h2>
+                <div class="grid-1x3">
+                    <div class="project-con">
+                        <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute.jpg" alt="" class="project-img">
+                        <div class="project-title">Tribute Page</div>
+                    </div>
+                    <div class="project-con">
+                        <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/random-quote-machine.png" alt="" class="project-img">
+                        <div class="project-title">Random Quote Machine</div>
+                    </div>
+                    <div class="project-con">
+                        <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/calc.png" alt="" class="project-img">
+                        <div class="project-title">JavaScript Calculator</div>
+                    </div>
+                </div>
+                <button class="btn">Show all ></button>
+            </section>
+            <section class="contact-section">
+                <div class="contact-header">
+                    <h2 class="underline">Let's work together...</h2>
+                    <p>How do you take your coffee?</p>
+                </div>
+                <div class="contact-list">
+                    <ul>
+                        <li><a href="https://codepen.io/freeCodeCamp/full/zNBOYG" id="profile-link">Facebook</a></li>
+                        <li><a href="https://codepen.io/freeCodeCamp/full/zNBOYG" id="profile-link">GitHub</a></li>
+                        <li><a href="https://codepen.io/freeCodeCamp/full/zNBOYG" id="profile-link">Twitter</a></li>
+                        <li><a href="https://codepen.io/freeCodeCamp/full/zNBOYG" id="profile-link">Send a mail</a></li>
+                        <li><a href="https://codepen.io/freeCodeCamp/full/zNBOYG" id="profile-link">Call me</a></li>
+                    </ul>
+                </div>
+            </section>
+            <footer>
+            </footer>
+        </div>
     </div>
 </body>
 </html>
