--- a/HTML+CSS/task_001_tributePage/index.html
+++ b/HTML+CSS/task_001_tributePage/index.html
@@ -25,7 +25,7 @@
         </figure>
         <article id="tribute-info">
             <h2>Here's a time line of Dr. Borlaug's life:</h2>
-            <ul>
+            <ul class="content">
                 <li><strong>1914</strong> - Born in Cresco, Iowa</li>
                 <li><strong>1933</strong> - Leaves his family's farm to attend the University of Minnesota, thanks to a
                     Depression era program known as the "National Youth Administration"</li>
