--- a/HTML+CSS/task_005_PersonalPortfolio/index.html
+++ b/HTML+CSS/task_005_PersonalPortfolio/index.html
@@ -27,7 +27,7 @@
             </section>
             <section class="project-tile">
                 <h2 class="underline">These are some of my projects</h2>
-                <div class="grid-1x3">
+                <div class="grid-1x3 grid-1x2">
                     <div class="project-con">
                         <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute.jpg" alt="" class="project-img">
                         <div class="project-title">Tribute Page</div>
@@ -40,6 +40,19 @@
                         <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/calc.png" alt="" class="project-img">
                         <div class="project-title">JavaScript Calculator</div>
                     </div>
+                    <div class="project-con">
+                        <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/map.jpg" alt="" class="project-img">
+                        <div class="project-title">Map Data Across the Globe</div>
+                    </div>
+                    <div class="project-con">
+                        <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/wiki.png" alt=""
+                            class="project-img">
+                        <div class="project-title">Wikipedia Viewer</div>
+                    </div>
+                    <div class="project-con">
+                        <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tic-tac-toe.png" alt="" class="project-img">
+                        <div class="project-title">Tic Tac Toe Game</div>
+                    </div>
                 </div>
                 <button class="btn">Show all ></button>
             </section>
@@ -49,16 +62,16 @@
                     <p>How do you take your coffee?</p>
                 </div>
                 <div class="contact-list">
-                    <ul>
-                        <li><a href="https://codepen.io/freeCodeCamp/full/zNBOYG" id="profile-link">Facebook</a></li>
-                        <li><a href="https://codepen.io/freeCodeCamp/full/zNBOYG" id="profile-link">GitHub</a></li>
-                        <li><a href="https://codepen.io/freeCodeCamp/full/zNBOYG" id="profile-link">Twitter</a></li>
-                        <li><a href="https://codepen.io/freeCodeCamp/full/zNBOYG" id="profile-link">Send a mail</a></li>
-                        <li><a href="https://codepen.io/freeCodeCamp/full/zNBOYG" id="profile-link">Call me</a></li>
-                    </ul>
+                        <a href="https://codepen.io/freeCodeCamp/full/zNBOYG" id="profile-link">Facebook</a>
+                        <a href="https://codepen.io/freeCodeCamp/full/zNBOYG" id="profile-link">GitHub</a>
+                        <a href="https://codepen.io/freeCodeCamp/full/zNBOYG" id="profile-link">Twitter</a>
+                        <a href="https://codepen.io/freeCodeCamp/full/zNBOYG" id="profile-link">Send a mail
+                        <a href="https://codepen.io/freeCodeCamp/full/zNBOYG" id="profile-link">Call me</a>
                 </div>
             </section>
             <footer>
+                <p>**This is just a fake portfolio. All the projects and contact details given are not real.</p>
+                <p>© Created for freeCodeCamp</p>
             </footer>
         </div>
     </div>
